home/gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: istio-gateway-wildcard-cert
  namespace: cert-manager
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: istio-ingress
  to:
  - group: ""
    kind: Secret
    name: cluster-wildcard-cert
  - group: ""
    kind: Secret
    name: code-server-cert
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: istio-ingress
spec:
  gatewayClassName: istio
  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: gateway-params
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - group: ''
        kind: Secret
        name: cluster-wildcard-cert
        namespace: cert-manager
    allowedRoutes:
      namespaces:
        from: All
  - name: https-code-server
    protocol: HTTPS
    port: 443
    hostname: "*.code.home.com"
    tls:
      mode: Terminate
      certificateRefs:
      - group: ''
        kind: Secret
        name: code-server-cert
        namespace: cert-manager
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: istio-ingress
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: istio-ingress
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 308
    matches:
      - path:
          type: PathPrefix
          value: /
